--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -108,6 +108,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                app:helperText="If don't have company set 'Individu'"
+                app:helperTextTextColor="@color/salem_2"
                 android:visibility="visible">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/nameCompany_profile_ET"
