--- a/app/src/main/res/layout/item_recycler_detail.xml
+++ b/app/src/main/res/layout/item_recycler_detail.xml
@@ -331,6 +331,13 @@
 
                     </LinearLayout>
 
+                    <View
+                        android:layout_width="333dp"
+                        android:layout_height="0.5dp"
+                        android:layout_gravity="center"
+                        android:background="@color/black">
+                    </View>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -342,7 +349,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:text="Creator Information"
+                            android:text="@string/creator_information"
                             android:textColor="@color/salem_1"
                             android:textSize="16sp"
                             android:textStyle="bold" />
@@ -357,8 +364,8 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="10dp"
                             android:layout_marginTop="10dp"
+                            android:layout_marginStart="10dp"
                             android:layout_marginBottom="5dp"
                             android:text="@string/creator_name"
                             android:textColor="@color/grey_mid"
@@ -379,7 +386,26 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="5dp"
+                            android:text="@string/actor_sub_title"
+                            android:textColor="@color/grey_mid"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
+                        <TextView
+                            android:id="@+id/actorTV"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="30sp"
+                            android:layout_marginBottom="15dp"
+                            android:hint="@string/your_data_in_here"
+                            android:textColor="@color/black"
+                            android:textSize="17sp"
+                            android:textStyle="normal" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="10dp"
                             android:layout_marginBottom="5dp"
                             android:text="@string/email_address_sub_title"
                             android:textColor="@color/grey_mid"
@@ -400,14 +426,13 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
-                            android:layout_marginTop="10dp"
                             android:layout_marginBottom="5dp"
-                            android:text="@string/gender_sub_title"
+                            android:text="@string/company_sub_title"
                             android:textColor="@color/grey_mid"
                             android:textSize="14sp"
                             android:textStyle="bold" />
                         <TextView
-                            android:id="@+id/genderTV"
+                            android:id="@+id/companyTV"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="30sp"
@@ -421,7 +446,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="10dp"
-                            android:layout_marginTop="10dp"
                             android:layout_marginBottom="5dp"
                             android:text="@string/address_sub_title"
                             android:textColor="@color/grey_mid"
