--- a/app/src/main/res/layout/item_recycler_detail.xml
+++ b/app/src/main/res/layout/item_recycler_detail.xml
@@ -162,7 +162,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="5sp"
                                 android:layout_marginBottom="5dp"
-                                android:text="@string/gram"
+                                android:text="@string/kilogram"
                                 android:textColor="@color/black"
                                 android:textSize="17sp"
                                 android:textStyle="normal" />
@@ -237,7 +237,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="5sp"
                                 android:layout_marginBottom="5dp"
-                                android:text="@string/gram"
+                                android:text="@string/kilogram"
                                 android:textColor="@color/black"
                                 android:textSize="17sp"
                                 android:textStyle="normal" />
@@ -273,7 +273,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="5sp"
                                 android:layout_marginBottom="5dp"
-                                android:text="@string/gram"
+                                android:text="@string/kilogram"
                                 android:textColor="@color/black"
                                 android:textSize="17sp"
                                 android:textStyle="normal" />
