--- a/app/src/main/res/layout/activity_new_traceability.xml
+++ b/app/src/main/res/layout/activity_new_traceability.xml
@@ -95,7 +95,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/varietyLayout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
@@ -105,14 +105,13 @@
                 app:errorEnabled="true"
                 app:hintTextColor="@color/salem_1">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/varietyEt"
+                <AutoCompleteTextView
+                    android:id="@+id/variety_DropDown"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:drawableStart="@drawable/ic_label"
                     android:drawablePadding="12dp"
-                    android:inputType="text"
-                    android:maxLines="1" />
+                    android:inputType="textCapWords"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -145,6 +144,7 @@
                 android:layout_marginEnd="12dp"
                 android:hint="@string/grade_title"
                 app:boxStrokeColor="@color/salem_1"
+                app:errorEnabled="true"
                 app:hintTextColor="@color/salem_1">
 
                 <AutoCompleteTextView
@@ -162,7 +162,6 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:layout_marginStart="12dp"
                 android:layout_marginEnd="12dp"
                 android:hint="@string/price_per_kg"
@@ -243,7 +242,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:layout_marginEnd="12dp"
-                android:hint="@string/planting_area_ET"
+                android:hint="@string/planting_location_ET"
                 app:boxStrokeColor="@color/salem_1"
                 app:errorEnabled="true"
                 app:hintTextColor="@color/salem_1">
