--- a/app/src/main/res/layout/activity_new_traceability.xml
+++ b/app/src/main/res/layout/activity_new_traceability.xml
@@ -259,7 +259,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/fertilizerLayout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
@@ -269,14 +269,13 @@
                 app:errorEnabled="true"
                 app:hintTextColor="@color/salem_1">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/fertilizerEt"
+                <AutoCompleteTextView
+                    android:id="@+id/fertilizer_DropDown"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:drawableStart="@drawable/ic_label"
                     android:drawablePadding="12dp"
-                    android:inputType="text"
-                    android:maxLines="1" />
+                    android:inputType="textCapWords"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -286,7 +285,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:layout_marginEnd="12dp"
-                android:hint="@string/type_of_pesticides_used"
+                android:hint="@string/the_type_of_pesticides_used"
                 app:boxStrokeColor="@color/salem_1"
                 app:errorEnabled="true"
                 app:hintTextColor="@color/salem_1">
