--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -106,7 +106,7 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/createNewCV"
                     android:layout_width="370dp"
-                    android:layout_height="170dp"
+                    android:layout_height="150dp"
                     app:cardCornerRadius="20dp"
                     app:cardElevation="5dp"
                     app:cardBackgroundColor="@color/salem_1"
@@ -161,7 +161,7 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/shTraceabilityCV"
                     android:layout_width="370dp"
-                    android:layout_height="170dp"
+                    android:layout_height="150dp"
                     app:cardCornerRadius="20dp"
                     app:cardElevation="5dp"
                     android:hapticFeedbackEnabled="true"
@@ -200,7 +200,66 @@
                             android:layout_centerVertical="true"
                             android:src="@drawable/ic_history"
                             android:layout_alignParentRight="true"
-                            android:layout_marginRight="20dp"
+                            android:layout_marginRight="17dp"
+                            android:layout_marginBottom="10dp"
+                            android:clickable="false"/>
+
+                    </RelativeLayout>
+
+                </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="20dp"
+                android:orientation="vertical"
+                android:gravity="center">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/summaryCV"
+                    android:layout_width="370dp"
+                    android:layout_height="150dp"
+                    app:cardCornerRadius="20dp"
+                    app:cardElevation="5dp"
+                    android:hapticFeedbackEnabled="true"
+                    app:cardBackgroundColor="@color/salem_1"
+                    app:cardUseCompatPadding="true"
+                    android:clickable="true"
+                    android:foreground="?attr/selectableItemBackground">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_centerVertical="true"
+                            android:background="@drawable/cv_summary"
+                            android:layout_alignParentRight="true"/>
+
+                        <TextView
+                            android:layout_width="230dp"
+                            android:layout_height="wrap_content"
+                            android:text="Sales Summary"
+                            android:layout_marginTop="20dp"
+                            android:textStyle="bold"
+                            android:textSize="25sp"
+                            android:textColor="@color/white"
+                            android:layout_marginLeft="15dp"
+                            android:clickable="false"
+                            android:lines="2"/>
+
+                        <ImageView
+                            android:layout_width="70dp"
+                            android:layout_height="70dp"
+                            android:layout_centerVertical="true"
+                            android:src="@drawable/ic_summary"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginRight="25dp"
                             android:layout_marginBottom="10dp"
                             android:clickable="false"/>
 
