--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -46,7 +46,7 @@
         </RelativeLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="30dp"
             android:orientation="horizontal"
@@ -93,7 +93,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="15dp"
             android:layout_marginBottom="10dp">
 
             <LinearLayout
@@ -105,7 +105,7 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/createNewCV"
-                    android:layout_width="370dp"
+                    android:layout_width="355dp"
                     android:layout_height="150dp"
                     app:cardCornerRadius="20dp"
                     app:cardElevation="5dp"
@@ -160,7 +160,7 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/shTraceabilityCV"
-                    android:layout_width="370dp"
+                    android:layout_width="355dp"
                     android:layout_height="150dp"
                     app:cardCornerRadius="20dp"
                     app:cardElevation="5dp"
@@ -219,7 +219,7 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/summaryCV"
-                    android:layout_width="370dp"
+                    android:layout_width="355dp"
                     android:layout_height="150dp"
                     app:cardCornerRadius="20dp"
                     app:cardElevation="5dp"
