Revision: 4. Fixing item handling, handling fee, and Price from farmer in layout input NewTraceabilityActivity.kt, to be continued...

--- a/app/src/main/res/layout/activity_new_traceability.xml
+++ b/app/src/main/res/layout/activity_new_traceability.xml
@@ -253,7 +253,7 @@
                     android:layout_height="wrap_content"
                     android:drawableStart="@drawable/ic_label"
                     android:drawablePadding="12dp"
-                    android:inputType="text"
+                    android:inputType="textCapWords"
                     android:maxLines="1" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -297,7 +297,7 @@
                     android:layout_height="wrap_content"
                     android:drawableStart="@drawable/ic_label"
                     android:drawablePadding="12dp"
-                    android:inputType="text"
+                    android:inputType="textCapWords"
                     android:maxLines="1" />
             </com.google.android.material.textfield.TextInputLayout>
 
