--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -103,6 +103,19 @@
                                 android:textStyle="bold" />
 
                             <TextView
+                                android:id="@+id/productIDTV"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginStart="100dp"
+                                android:layout_marginEnd="50dp"
+                                android:gravity="center"
+                                android:text="@string/product_id"
+                                android:textColor="@color/black"
+                                android:textSize="14sp"
+                                android:textStyle="bold" />
+
+                            <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
